@@ -22,6 +22,7 @@
 #include <kmdichildview.h>
 
 class RCommand;
+class ROutput;
 class QPushButton;
 class QTextEdit;
 class RKCommandEditor;
@@ -40,7 +41,9 @@ public:
 /** Adds input to the watch-window (i.e. commands issued) */
 	void addInput (RCommand *command);
 /** Adds output to the watch-window (i.e. replies received) */
-	void addOutput (RCommand *command);
+	void addOutput (RCommand *command, ROutput *output_fragment);
+/** Command has finished. If the command has failed, it may be neccessary to print some more information */
+	void commandDone (RCommand *command);
 signals:
 /** the watch emits this, when it should be raised (apparently this can only be done from the main frame) */
 	void raiseWatch ();
@@ -52,8 +55,11 @@ public slots:
 
 private:
 	void addInputNoCheck (RCommand *command);
+	void addOutputNoCheck (RCommand *command, const QString &output);
 /** internal helper function, called whenever a line/lines have been added. Check whether log is longer than maximum setting. Scroll to the bottom */
 	void linesAdded ();
+/** A pointer to the last command the input (i.e. the command itself) was shown for. Used to keep track of whether a command's input should be shown or not */
+	RCommand *command_input_shown;
 
 	QTextEdit *watch;
 	QBoxLayout* pLayout;
