@@ -1,3 +1,4 @@
+- show command output immediately in command log
 - remember location where R script/workspace files were last opened, and start file-selection dialogs there
 - sometimes the last level in the factor levels editor got lost. Fixed
 
